# fastapi_task_manager

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  docker.env  main.py  pyproject.toml  requirements.txt
app/api/endpoints/: tasks.py  users.py
app/api/models/: task.py  user.py
app/api/schemas/: user.py
app/core/: .env  config.py  jwt.py  security.py
app/db/: database.py
app/db/crud/: task.py  user.py
app/db/models/: base.py  task.py  user.py
app/log/: log_config.py
migrations/: env.py
tests/: conftest.py  test_db_crud.py  test_endpoints.py
